# noetikon

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
docker/: Dockerfile.admin  Dockerfile.bot  docker-compose.yml
src/noetikon/: config.py  database.py
src/noetikon/admin/: app.py  auth.py  deps.py
src/noetikon/admin/routes/: groups.py  login.py  stats.py  users.py
src/noetikon/admin/templates/: base.html  login.html  stats.html
src/noetikon/admin/templates/groups/: form.html  list.html
src/noetikon/admin/templates/users/: form.html  list.html
src/noetikon/bot/: access.py  app.py  router.py
src/noetikon/bot/handlers/: badges.py  humor.py  llm_proxy.py  meetings.py
src/noetikon/models/: __init__.py  group.py  stats.py  user.py
src/noetikon/services/: calendar_service.py  group_service.py  llm_service.py  stats_service.py  user_registry.py
